force-app/main/default/objects/Student__c/fields/Accounting_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Students2</relationshipName>
    <type>Lookup</type>
</CustomField>