force-app/main/default/objects/Student__c/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <label>Course Details</label>
    <referenceTo>ContactP__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>