force-app/main/default/objects/Student__c/fields/Customer_Service_Member__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>