force-app/main/default/objects/Student__c/fields/Student_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Student_Fullname__c</fullName>
    <label>Student Fullname</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>