force-app/main/default/objects/Student__c/fields/Technical_Support_Member__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Support Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Students1</relationshipName>
    <type>Lookup</type>
</CustomField>